- ui 변경 - 정보 탭 내용 추가

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -876,6 +876,10 @@ $btn-mb: 0.5rem;
       border-radius: 50%;
       margin-bottom: $btn-mb;
     }
+
+    .icon-container {
+      padding-left: 1.5rem;
+    }
   } /* .sidebar-bottom */
 } /* #sidebar */
 
