--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,57 +48,56 @@
     </ul>
   </nav>
 
-  <div class="sidebar-bottom d-flex flex-wrap  align-items-center w-100">
+  <div class="sidebar-bottom d-flex flex-wrap align-items-center w-100">
     {% unless site.theme_mode %}
       <button type="button" class="mode-toggle btn" aria-label="Switch Mode">
         <i class="fas fa-adjust"></i>
       </button>
 
       {% if site.data.contact.size > 0 %}
-        <span class="icon-border"></span>
+<!--        <span class="icon-border"></span>-->
       {% endif %}
     {% endunless %}
-
-    {% for entry in site.data.contact %}
+    <div class="d-flex icon-container">
+      {% for entry in site.data.contact %}
       {% case entry.type %}
-        {% when 'github', 'twitter' %}
-          {%- capture url -%}
-            https://{{ entry.type }}.com/{{ site[entry.type].username }}
-          {%- endcapture -%}
-        {% when 'email' %}
-          {% assign email = site.social.email | split: '@' %}
-          {%- capture url -%}
-            javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
-          {%- endcapture -%}
-        {% when 'rss' %}
-          {% assign url = '/feed.xml' | relative_url %}
-        {% else %}
-          {% assign url = entry.url %}
+      {% when 'github' %}
+      {%- capture url -%}
+      https://{{ entry.type }}.com/{{ site[entry.type].username }}
+      {%- endcapture -%}
+      {% when 'email' %}
+      {% assign email = site.social.email | split: '@' %}
+      {%- capture url -%}
+      javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
+      {%- endcapture -%}
+      {% else %}
+      {% assign url = entry.url %}
       {% endcase %}
 
       {% if url %}
-        <a
-          href="{{ url }}"
-          aria-label="{{ entry.type }}"
-          {% assign link_types = '' %}
+      <a
+        href="{{ url }}"
+        aria-label="{{ entry.type }}"
+        {% assign link_types = '' %}
 
-          {% unless entry.noblank %}
-            target="_blank"
-            {% assign link_types = 'noopener noreferrer' %}
-          {% endunless %}
+        {% unless entry.noblank %}
+        target="_blank"
+        {% assign link_types = 'noopener noreferrer' %}
+        {% endunless %}
 
-          {% if entry.type == 'mastodon' %}
-            {% assign link_types = link_types | append: ' me' | strip %}
-          {% endif %}
-
-          {% unless link_types == empty %}
-            rel="{{ link_types }}"
-          {% endunless %}
-        >
-          <i class="{{ entry.icon }}"></i>
-        </a>
+        {% if entry.type == 'mastodon' %}
+      {% assign link_types = link_types | append: ' me' | strip %}
       {% endif %}
-    {% endfor %}
+
+      {% unless link_types == empty %}
+      rel="{{ link_types }}"
+      {% endunless %}
+      >
+      <i class="{{ entry.icon }}"></i>
+      </a>
+      {% endif %}
+      {% endfor %}
+    </div>
   </div>
   <!-- .sidebar-bottom -->
 </aside>
