--- a/_includes/mode-toggle.html
+++ b/_includes/mode-toggle.html
@@ -34,23 +34,24 @@
       let self = this;
 
       /* always follow the system prefers */
-      this.sysDarkPrefers.addEventListener('change', () => {
-        if (self.hasMode) {
-          if (self.isDarkMode) {
-            if (!self.isSysDarkPrefer) {
-              self.setDark();
-            }
-          } else {
-            if (self.isSysDarkPrefer) {
-              self.setLight();
-            }
-          }
+      // this.sysDarkPrefers.addEventListener('change', () => {
+      //   if (self.hasMode) {
+      //     if (self.isDarkMode) {
+      //       if (!self.isSysDarkPrefer) {
+      //         self.setDark();
+      //       }
+      //     } else {
+      //       if (self.isSysDarkPrefer) {
+      //         self.setLight();
+      //       }
+      //     }
+      //
+      //     self.clearMode();
+      //   }
+      //   self.notify();
+      // });
+      this.setDark();
 
-          self.clearMode();
-        }
-
-        self.notify();
-      });
     } /* constructor() */
 
     get sysDarkPrefers() {
