feature: 댓글 기능 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -134,6 +134,15 @@ tail_includes:
       {% include post-sharing.html lang=lang %}
     </div>
     <!-- .post-tail-bottom -->
+
+    <!-- utterances comment-->
+    <script src="https://utteranc.es/client.js"
+            repo="seonb2n/seonb2n.github.io"
+            issue-term="url"
+            theme="github-dark"
+            crossorigin="anonymous"
+            async>
+    </script>
   </div>
   <!-- div.post-tail-wrapper -->
 </article>
